<resources>
    <string name="app_name">Tomato Timer</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_choose_calendar">Choose Calendar</string>

    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_export_csv">Export</string>
    <string name="action_clear_history">Clear</string>

    <string name="dialog_give_up_title">Give Up</string>
    <string name="dialog_give_up_message">Are you wish to give up?</string>

    <string name="dialog_clear_history_title">Clear History</string>
    <string name="dialog_clear_history_message">Are you sure to clear ALL history?</string>

    <string name="dialog_comment_title">Comment</string>
    <string name="dialog_comment_message">What have you done:</string>

    <string name="toast_export_to">Exported to: </string>
    <string name="toast_export_external_unavailable">Failed: The external storage is unavailable.</string>
    <string name="toast_export_cannot_create_folder">Failed: Cannot create folder.</string>
    <string name="toast_export_cannot_write_to_file">Failed: Cannot write to file.</string>

    <string name="timer_start">Start</string>
    <string name="timer_finished">Finished</string>

    <string name="tomato_synced">Synced</string>
    <string name="tomato_unsynced">Unsynced</string>

    <string name="device_offline">The device is off-line</string>

    <string name="setting_schedule">Schedule</string>
    <string name="setting_period">Period</string>
    <string name="setting_period_num">25 mins</string>
    <string name="setting_period_num_suffix"> mins</string>
    <string name="setting_period_too_short">Are you kidding me?</string>
    <string name="setting_period_normal">25 minutes is the default setting.</string>
    <string name="setting_period_too_long">All work and no play makes Jack a dull boy.</string>
    <string name="setting_vibrate">Vibrate</string>
    <string name="setting_vibrate_desc">Vibrate when finished</string>

    <string name="setting_sync">Sync</string>
    <string name="setting_sync_default_title">Default Title</string>
    <string name="setting_sync_to_calendar">Sync to calendar</string>
    <string name="setting_sync_current_calendar">Current calendar:</string>
    <string name="setting_sync_current_calendar_none">None</string>
    <string name="setting_sync_choose_calendar">Choose Calendar</string>

    <string name="setting_about">About</string>
    <string name="setting_source">Source Code</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_privacy">Privacy</string>
    <string name="setting_privacy_desc">The app will gather no information and only write permission is used.</string>
</resources>
